# pipeline.materials.file

./: MANIFEST.in  README.md  history.txt  makefile  requirements.txt  setup.cfg
.github/workflows/: pep257.yml  py3.yml
fixtures/: materials01.csv
pipeline_materials_file/: __init__.py  csv.py  toml.py  types.py
tests/: conftest.py  requirements.txt
tests/test/: __init__.py  test_csv.py  test_init.py  test_toml.py  test_types.py
