[metadata]
name = pipeline_materials_file
version = 1.0
author = Vitaly Bogomolov
author_email = mail@vitaly-bogomolov.ru
description = Pipeline materials file for static integrity calculation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vb64/pipeline.materials.file
project_urls =
    Bug Tracker = https://github.com/vb64/pipeline.materials.file/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = pipeline_materials_file
python_requires = >=3.6
install_requires = 
  pipeline-material==1.0
  pipeline-csv==1.16.1
  toml==0.10.2
